[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/MenuItem.tscn" type="PackedScene" id=1]
[ext_resource path="res://Graphics/white.png" type="Texture" id=2]
[ext_resource path="res://Fonts/MenuFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scripts/GameLoop.gd" type="Script" id=4]
[ext_resource path="res://Sounds/Marcos H. Bolanos - Laberynth Mind.mp3" type="AudioStream" id=5]

[node name="GameLoop" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -101.373, -14.0516 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InGame" type="Node2D" parent="."]

[node name="PlaceholderBGimage" type="TextureRect" parent="InGame"]
margin_right = 798.0
margin_bottom = 597.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="PlacheholderTitle" type="Label" parent="InGame"]
margin_top = 174.667
margin_right = 795.0
margin_bottom = 234.667
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Game has started"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseMenu" type="Node2D" parent="."]
visible = false
scale = Vector2( 1.00076, 0.998538 )

[node name="Background" type="TextureRect" parent="PauseMenu"]
modulate = Color( 0, 0, 0, 0.870588 )
margin_right = 799.0
margin_bottom = 601.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="PauseMenu"]
margin_top = 174.667
margin_right = 795.0
margin_bottom = 234.667
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "PAUSED"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuOptions" type="VBoxContainer" parent="PauseMenu"]
margin_left = 0.52124
margin_top = 254.979
margin_right = 797.522
margin_bottom = 394.979
custom_constants/separation = 0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="ReturnToGame" parent="PauseMenu/MenuOptions" instance=ExtResource( 1 )]
margin_right = 797.0
margin_bottom = 44.0
item_name = "RETURN TO GAME"
item_font_color = Color( 1, 1, 1, 1 )

[node name="ReturnToTitle" parent="PauseMenu/MenuOptions" instance=ExtResource( 1 )]
margin_top = 44.0
margin_right = 797.0
margin_bottom = 88.0
item_name = "RETURN TO TITLE"
item_font_color = Color( 1, 1, 1, 1 )

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
